# ue-bridge

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
docs/: PRD.md  RFC.md  animbp_state_machine_mvp_plan.md  code_review.md  touhou_project_pilot.md  working.md
hosts/UEBridgeHost/: UEBridgeHost.uproject
hosts/UEBridgeHost/Config/: DefaultEngine.ini
hosts/UEBridgeHost/Content/UEBridgeAutomation/: AT_WorkflowA_BP_63828A1BBB483C2FF3AC81BA3787C421.uasset  AT_WorkflowA_BP_A98BB8562F4A0E6F793E4FA77FB7B36B.uasset
hosts/UEBridgeHost/Content/UEBridgePythonIntegration/: PyWorkflowA_43c6ccd585.uasset  PyWorkflowA_4a4a282cb1.uasset
hosts/UEBridgeHost/Source/: UEBridgeHost.Target.cs  UEBridgeHostEditor.Target.cs
plugin/: UEBridgeEditor.uplugin  UEEditorMCP.uplugin  setup_legacy_bridge.bat  setup_legacy_bridge.ps1  setup_mcp.bat  setup_mcp.ps1
plugin/Source/UEBridgeEditor/: UEBridgeEditor.Build.cs
plugin/Source/UEEditorMCP/: UEEditorMCP.Build.cs
plugin/Source/UEEditorMCP/Private/: MCPBridge.cpp  (+5 more)
python/: pyproject.toml
python/src/: __init__.py  __main__.py  bridge.py  cli.py  connection.py  errors.py
python/tests/: test_bridge.py  test_cli.py  test_connection.py  test_integration.py  test_integration_workflow_a.py  test_package_contract.py
python/ue_bridge/: __init__.py  bridge.py  cli.py  connection.py  errors.py
scripts/: run_python_unreal_integration.sh  setup.sh
skills/: ue_editor_installation.md  ue_editor_usage.md
skills/ue_editor_usage/: api_reference.md  examples.md  input_system.md  materials_and_textures.md  recipes_and_gotchas.md
(+74 files in other folders)
