[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ue-bridge"
version = "0.1.0"
description = "Python library for Unreal Editor automation via TCP"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=5.0"]

[project.scripts]
ue-bridge = "ue_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "ue_bridge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires running UE editor"]
